
- All REPL I/O is performed through ~*QUERY-IO*~ and all debugger I/O is
  performed through ~*DEBUG-IO*~, while ~*STANDARD-OUTPUT*,
  ~*STANDARD-INPUT*~ and ~*ERROR-OUTPUT*~ are left for the user.

- Fix numerous issues in weak hash table implementation, most notably
  resolve invalid handling of collissions.

- Update bundled libgc-8.2.4 to libgc-8.2.8.

* 24.5.10 changes since 23.9.9
** Announcement
Dear Community,

We are announcing a new stable ECL release. The release mainly includes a
number of bug fixes, including changes that prevent rare crashes in the
garbage collector on Mac OS X, some bug fixes for gray streams and for
pathname related functionality. Moreover, the release features new
extensions for gray streams (gray:stream-line-length,
gray:stream-file-length, gray:stream-file-string-length and generic
versions of cl:pathname and cl:truename) as well as improved emscripten
support (allowing shared library builds) and small improvements to the
manual.

We'd like to thank all people who contributed to ECL with code, testing,
issue reports and otherwise.

People listed here contributed code in this iteration: Daniel Kochmański,
Kirill A. Korinsky, Marius Gerbershagen, Tarn W. Burton, Mark Shroyer,
Dmitry Solomennikov, Kevin Zheng.

This release is available for download in a form of a source code archive
(we do not ship prebuilt binaries):

- [ECL 24.5.10 tarball archive](https://common-lisp.net/project/ecl/static/files/release/ecl-24.5.10.tgz)
- [The ECL Manual](https://common-lisp.net/project/ecl/static/manual/)

Happy Hacking,
The ECL Developers

** Enhancements
- Add gray-streams module. This makes it possible to load Gray stream
  support via ~(require '#:gray-streams)~ versus calling the internal
  function ~gray::redefine-cl-functions~.
- Add support for some Gray stream extensions by adding the following
  generic functions.
  1) ~gray:stream-line-length~ which allows stream specific line lengths
     when ~cl:*print-right-margin*~ is NIL.