@@ -374,16 +374,10 @@ ecl_cons(cl_object a, cl_object d)
   ecl_disable_interrupts_env(the_env);
   obj = GC_MALLOC(sizeof(struct ecl_cons));
   ecl_enable_interrupts_env(the_env);
-#ifdef ECL_SMALL_CONS
-  obj->car = a;
-  obj->cdr = d;
-  return ECL_PTR_CONS(obj);
-#else
   obj->t = t_list;
   obj->car = a;
   obj->cdr = d;
   return (cl_object)obj;
-#endif
 }
 
 cl_object
